# pydantic-flow

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  coverage.json  justfile  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  release.yml  update-dependencies.yml
docs/: dag_resolution.md  prompt_library.md  streaming.md
examples/: README.md  example.py  fan_in_example.py  hierarchical_flows.py  prompt_library_demo.py  prompt_node_example.py  streaming_comprehensive.py  streaming_simple.py  sub_flow_example.py  type_safety_demo.py
examples/loops/: README.md  self_loop_counter.py  two_node_while_loop.py
src/pflow/: __init__.py  __main__.py
src/pflow/flow/: __init__.py  exceptions.py  flow.py
src/pflow/nodes/: __init__.py  base.py  conditional.py  flow.py  parser.py  prompt.py  retry.py  tool.py
src/pydantic_flow/: __init__.py  __main__.py  project_info.py
src/pydantic_flow/core/: __init__.py  errors.py  routing.py  run_config.py
src/pydantic_flow/engine/: __init__.py  stepper.py
src/pydantic_flow/flow/: __init__.py  exceptions.py  flow.py
src/pydantic_flow/nodes/: __init__.py  agent.py  base.py  conditional.py  flow.py  merge_parser.py  merge_prompt.py  merge_tool.py  parser.py  prompt.py  protocols.py  retriever.py  retry.py  tool.py
src/pydantic_flow/prompt/: __init__.py  enums.py  escape_policies.py  node.py  parsers.py  serde.py  templates.py  types.py  validation.py
src/pydantic_flow/prompt/engines/: __init__.py  f_string.py  jinja2.py  mustache.py
src/pydantic_flow/streaming/: __init__.py  events.py  helpers.py  observers.py  parser.py
tests/: test_additional_coverage.py  test_agent_node.py  test_error_handling.py  test_execution_mode.py  test_flow_node_coverage.py  test_init.py  test_init_coverage.py  test_loops.py  test_merge_nodes.py  test_node_streaming.py  test_observers.py  test_pflow.py  test_prompt_node_integration.py  test_retriever_node.py  test_stepper_coverage.py  test_streaming.py  test_streaming_helpers.py  test_streaming_parser.py  test_strongly_typed_output.py
tests/prompt/: __init__.py  test_chat_joiners.py  test_collect_variables.py  test_coverage_completion.py  test_f_string_basic.py  test_integration_prompt.py  test_jinja_sandbox.py  test_json_model_parser.py  test_mustache_basic.py
